2009-13-09  Jan Nijtmans  <nijtmans@users.sourceforge.net>

	* include/winuser.h (SendMessageTimeoutA, SendMessageTimeoutW): Correct
	definition.

2009-11-09  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winnt.h (PROCESS_SUSPEND_RESUME): Define.

2009-10-29  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Honor DESTDIR for winsup/mingw and winsup/w32api.
	Detect and report error if installation paths are win32
	format, but DESTDIR is non-empty.

	* Makefile.in (install, uninstall): Use FLAGS_TO_PASS
	when invoking make in subdirs.
	* lib/Makefile.in (DESTDIR): Honor per convention.
	(need-DESTDIR-compatibility): New macro; define it and a
	corresponding rule.
	(fail-DESTDIR-compatibility): New dependency goal.
	(install-libraries, install-headers, uninstall-libraries,
	uninstall-headers): Require need-DESTDIR-compatibility.
	* lib/ddk/Makefile.in: Ditto.
	* lib/directx/Makefile.in: Ditto.

2009-10-04  Corinna Vinschen  <corinna@vinschen.de>

	* include/winbase.h (CreateRestrictedToken): Declare for >= Win 2000.
	_WIN32_WINNT >= 0x0500.
	(DISABLE_MAX_PRIVILEGE, SANDBOX_INERT, LUA_TOKEN,
	WRITE_RESTRICTED): Define.
	(IsTokenRestricted): Declare for >= Win 2000.

2009-08-30  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/wtsapi32.h (WTSQuerySessionInformationA,
	WTSQuerySessionInformationW, WTSQuerySessionInformation, WTSFreeMemory):
	Moved to (_WIN32_WINNT >= 0x0500) guard.
	(thanks to Pierre Ossman)

2009-08-09  Andy Koppe  <andy.koppe@gmail.com>

	* include/winnls.h (IS_HIGH_SURROGATE, IS_LOW_SURROGATE,
	IS_SURROGATE_PAIR): Define.

2009-07-27  Corinna Vinschen  <corinna@vinschen.de>

	* include/winnt.h (FILE_SUPPORTS_HARD_LINKS,
	FILE_SUPPORTS_EXTENDED_ATTRIBUTES, FILE_SUPPORTS_OPEN_BY_FILE_ID,
	FILE_SUPPORTS_USN_JOURNALS): Define.  Add comment.
	* include/ddk/ntifs.h: Ditto.
	(FILE_SEQUENTIAL_WRITE_ONCE, FILE_SUPPORTS_TRANSACTIONS): Define.

2009-07-21  Corinna Vinschen  <corinna@vinschen.de>
