@@ -1377,7 +1377,7 @@
 #define ERROR_DS_HAVE_PRIMARY_MEMBERS 8521L
 #define ERROR_DS_STRING_SD_CONVERSION_FAILED 8522L
 #define ERROR_DS_NAMING_MASTER_GC 8523L
-#define ERROR_DS_LOOKUP_FAILURE 8524L
+#define ERROR_DS_DNS_LOOKUP_FAILURE 8524L
 #define ERROR_DS_COULDNT_UPDATE_SPNS 8525L
 #define ERROR_DS_CANT_RETRIEVE_SD 8526L
 #define ERROR_DS_KEY_NOT_UNIQUE 8527L
@@ -1397,7 +1397,7 @@
 #define ERROR_SAM_INIT_FAILURE 8541L
 #define ERROR_DS_DRA_SCHEMA_INFO_SHIP 8542L
 #define ERROR_DS_DRA_SCHEMA_CONFLICT 8543L
-#define ERROR_DS_DRA_EARLIER_SCHEMA_CONLICT 8544L
+#define ERROR_DS_DRA_EARLIER_SCHEMA_CONFLICT 8544L
 #define ERROR_DS_DRA_OBJ_NC_MISMATCH 8545L
 #define ERROR_DS_NC_STILL_HAS_DSAS 8546L
 #define ERROR_DS_GC_REQUIRED 8547L
@@ -1640,7 +1640,7 @@
 #define WSA_QOS_EFILTERCOUNT 11021L
 #define WSA_QOS_EOBJLENGTH 11022L
 #define WSA_QOS_EFLOWCOUNT 11023L
-#define WSA_QOS_EUNKNOWNPSOBJ 11024L
+#define WSA_QOS_EUNKOWNPSOBJ 11024L
 #define WSA_QOS_EPOLICYOBJ 11025L
 #define WSA_QOS_EFLOWDESC 11026L
 #define WSA_QOS_EPSFLOWSPEC 11027L
